готов блок преимущества

--- a/style/style.css
+++ b/style/style.css
@@ -3,5 +3,6 @@
 @import "/style/header.css";
 
 @import "/components/advanatages/style/advantages.css";
+@import "/components/advanatages/style/form.css";
 
 @import "/style/footer.css";
