--- a/style/common.css
+++ b/style/common.css
@@ -39,7 +39,8 @@ a,
 h2,
 h3,
 h4,
-p {
+p,
+label {
     font-family: 'Montserrat', sans-serif;
 }
 
@@ -48,7 +49,10 @@ p {
 }
 
 .primary-button {
+    font-family: 'Montserrat', sans-serif;
+    cursor: pointer;
     display: flex;
+    border: none;
     justify-content: center;
     width: 100%;
     border-radius: var(--border-radius);
@@ -57,6 +61,7 @@ p {
     padding: 15px 0;
     text-decoration: none;
     font-weight: 700;
+    font-size: 16px;
     transition-duration: .3s;
 }
 
@@ -73,4 +78,46 @@ p {
     line-height: 25px;
     font-size: 15px;
     color: var(--secondary-text-color);
+}
+
+
+input[type=text],
+input[type=tel],
+textarea {
+    padding-left: 10px;
+}
+
+textarea {
+    padding-top: 10px;
+}
+
+input,
+textarea {
+    font-family: 'Montserrat', sans-serif;
+    min-height: 48px;
+    width: 100%;
+    border: none;
+    border: 1px solid #DDDDDD;
+    border-radius: var(--border-radius);
+    background: var(--secondary-white);
+}
+
+textarea {
+    resize: none;
+}
+
+.input-title {
+    font-size: 13px;
+    line-height: 20px;
+    color: #999999;
+}
+
+.input-title::after {
+    content: '*';
+    color: #F25353;
+    padding-left: 2px;
+}
+
+.send-form{
+    margin-top: 40px;
 }
