--- a/components/form/style/form.css
+++ b/components/form/style/form.css
@@ -1,4 +1,8 @@
-.section-form {}
+.section-form {
+    display: flex;
+    flex-direction: column;
+    /* align-items: center; */
+}
 
 .form-title {
     display: flex;
@@ -47,6 +51,7 @@
 }
 
 .consent-container{
+    margin-top: 22px;
     display: flex;
     align-items: center;
 }
