--- a/style/style.css
+++ b/style/style.css
@@ -3,6 +3,7 @@
 @import "/style/header.css";
 
 @import "/components/advanatages/style/advantages.css";
+@import "/components/news/style/news.css";
 @import "/components/form/style/form.css";
 
 @import "/style/footer.css";
