--- a/style/style.css
+++ b/style/style.css
@@ -4,6 +4,7 @@
 
 @import "/components/advanatages/style/advantages.css";
 @import "/components/news/style/news.css";
+@import "/components/about/style/about.css";
 @import "/components/form/style/form.css";
 
 @import "/style/footer.css";
