--- a/style/common.css
+++ b/style/common.css
@@ -44,6 +44,12 @@ label {
     font-family: 'Montserrat', sans-serif;
 }
 
+
+h3 {
+    font-size: 18px;
+    line-height: 28px;
+}
+
 a {
     text-decoration: none;
     color: var(--primary-text-color);
