--- a/components/product/style/product.css
+++ b/components/product/style/product.css
@@ -1,5 +1,5 @@
 .product {
-  
+    margin: 150px 0;
 }
 
 .product-list {
@@ -19,6 +19,12 @@
     border-radius: var(--border-radius);
 }
 
+.sticker-product {
+    z-index: 1;
+    position: absolute;
+    letter-spacing: 1.5px;
+}
+
 .product-card__info {
     position: relative;
     display: flex;
@@ -36,11 +42,11 @@
     transform: scale(1.05);
 }
 
-.product-link_title {
+.product-link__title {
     transition-duration: .3s;
 }
 
-.product-link_title:hover {
+.product-link__title:hover {
     color: var(--secondary-color);
 }
 
@@ -118,32 +124,7 @@
     background: url('/images/product/icon-fast-buy.svg') center no-repeat var(--primary-white);
 }
 
-.sticker {
-    z-index: 1;
-    position: absolute;
-    padding: 4px;
-    font-size: 10px;
-    letter-spacing: 1.5px;
-    font-family: 'Montserrat', sans-serif;
-    text-transform: uppercase;
-    width: 100%;
-    max-width: max-content;
-    border-radius: var(--border-radius);
-    color: var(--primary-white);
-    border: 1px solid rgba(0, 0, 0, 0.1);
-}
 
-.heat {
-    background: #ED673C;
-}
-
-.recommend {
-    background: #925AEC;
-}
-
-.new {
-    background: #31B82F;
-}
 
 @media (max-width:1600px) {
     .product-list {
