--- a/style/style.css
+++ b/style/style.css
@@ -4,7 +4,7 @@
 @import '/components/header/style/header.css';
 
 @import '/components/advanatages/style/advantages.css';
-@import '/components/news/style/news.css"';
+@import '/components/news/style/news.css';
 @import '/components/about/style/about.css';
 @import '/components/form/style/form.css';
 @import '/components/product/style/product.css';
