--- a/components/about/style/about.css
+++ b/components/about/style/about.css
@@ -1,4 +1,5 @@
 .about {
+    margin-top: 150px;
     display: grid;
     grid-template-columns: [column] 1fr [column] 2fr;
     grid-template-rows: [row] 1fr;
@@ -11,6 +12,7 @@
     display: flex;
     flex-direction: column;
     gap: 29px;
+    align-items: center;
     /* ВРЕМЕННО поменять*/
 }
 
@@ -37,6 +39,11 @@
     align-items: center;
 }
 
+.advantages-img {
+    display: flex;
+    max-width: 100%;
+}
+
 .card-content {
     max-width: fit-content;
     display: flex;
@@ -56,6 +63,9 @@
     position: relative;
     grid-column: column 1 / span 2;
     grid-row: row 2;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .video {
@@ -65,22 +75,20 @@
 .video-btn {
     z-index: 1;
     position: absolute;
-    top: 52%;
-    left: 51%;
-    transform: translateY(-50%) translateX(-50%);
     cursor: pointer;
     width: 100px;
     height: 100px;
     border-radius: 50%;
     border: none;
     background: #3562D6;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .video-btn::after {
     content: '';
-    left: 41%;
-    top: 40%;
-    position: absolute;
+    position: relative;
     border-style: solid;
     border-width: 0 14px 26px 14px;
     border-color: transparent transparent var(--primary-white) transparent;
@@ -113,11 +121,6 @@
         width: 75px;
         height: 75px;
     }
-
-    .video-btn::after {
-        left: 38%;
-        top: 35%;
-    }
 }
 
 @media (max-width: 768px) {
@@ -126,4 +129,16 @@
         grid-template-rows: 1fr;
     }
 
+    .about-title {
+        align-items: center;
+    }
+
+    .video-btn {
+        width: 35px;
+        height: 35px;
+    }
+
+    .video-btn::after {
+        border-width: 0 5px 10px 5px;
+    }
 }
