--- a/components/news/style/news.css
+++ b/components/news/style/news.css
@@ -1,4 +1,6 @@
-.news {}
+.news {
+    margin-top: 150px;
+}
 
 .news-title {
     display: flex;
@@ -6,12 +8,14 @@
     align-items: center;
 }
 
-.news-title__main {}
-
-.news-title__link {}
+.news-main__title {
+    padding: 12px 0 34px 0;
+}
 
 .news-list {
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    margin-top: 63px;
     justify-content: space-between;
     gap: 32px;
 }
@@ -20,7 +24,7 @@
     overflow: hidden;
     position: relative;
     border-radius: var(--border-radius);
-    transition: all 0.3s ease-out;
+    transition: all 0.3s;
 }
 
 .news-item__background {
@@ -28,7 +32,12 @@
     z-index: -1;
 }
 
+.news-item__background img {
+    width: 100%;
+}
+
 .news-item__title {
+    width: 100%;
     color: var(--primary-white);
     display: flex;
     flex-direction: column;
@@ -37,4 +46,88 @@
     position: absolute;
     bottom: 0;
     background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
+}
+
+.news-item__content {
+    opacity: 0;
+    position: absolute;
+    height: 100%;
+    top: 0;
+    color: var(--primary-white);
+    overflow: hidden;
+    opacity: 0;
+    transition: 0.4s;
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.news-link:hover>.news-item__content {
+    opacity: 1;
+}
+
+.bg__first {
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+        url(/images/news/news-secondary1.png);
+    background-repeat: no-repeat;
+    background-size: 100%;
+
+}
+
+.news-additional {
+    display: flex;
+    flex-direction: column;
+}
+
+.news-additional__themes {
+    font-size: 13px;
+    line-height: 27px;
+    color: rgba(255, 255, 255, 0.7);
+}
+
+.news-additional__title {
+    padding-top: 15px;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 28px;
+    color: var(--primary-white);
+}
+
+.news-additional__description {
+    padding-top: 25px;
+    font-size: 15px;
+    line-height: 25px;
+    color: rgba(255, 255, 255, 0.8);
+}
+
+.price-container {
+    display: flex;
+    align-items: start;
+    flex-direction: column;
+}
+
+.price-discount {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
+.starting-price {
+    font-weight: 600;
+    color: #999999;
+    text-decoration-line: line-through;
+}
+
+
+@media (max-width:1600px) {
+    .news-list {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+@media (max-width:768px) {
+    .news-list {
+        align-self: center;
+        grid-template-columns: 1fr;
+    }
 }
